--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,4 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #fff;
+}
+
+body {
+    background-color: #000;
+}
+
+.opciones {
+    border: 1px solid #000;
+    width: 50%;
+}
+
+.resultado {
+    border: 1px solid #000;
+    width: 50%;
 }
